# bmlib

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
bmlib/: __init__.py
bmlib/agents/: __init__.py  base.py
bmlib/db/: __init__.py  connection.py  migrations.py  operations.py  transactions.py
bmlib/fulltext/: __init__.py  cache.py  jats_parser.py  models.py  service.py
bmlib/llm/: __init__.py  client.py  data_types.py  token_tracker.py  utils.py
bmlib/llm/providers/: __init__.py  anthropic.py  base.py  deepseek.py  gemini.py  mistral.py  ollama.py  openai_compat.py  openai_provider.py
bmlib/publications/: __init__.py  models.py  schema.py  storage.py  sync.py
bmlib/publications/fetchers/: __init__.py  biorxiv.py  (+3 more)
bmlib/quality/: __init__.py  data_models.py  manager.py  metadata_filter.py  quality_agent.py  study_classifier.py
bmlib/templates/: __init__.py  engine.py
bmlib/transparency/: __init__.py  analyzer.py  models.py
docs/manual/: agents.md  database.md  fulltext.md  index.md  llm.md  publications.md  quality.md  templates.md  transparency.md
docs/plans/: 2026-02-13-publications-implementation.md  2026-02-13-publications-module-design.md
tests/: __init__.py  test_agents.py  test_db.py  test_fulltext_cache.py  test_fulltext_models.py  test_fulltext_service.py  test_jats_parser.py  test_llm.py  test_migrations.py  test_openai_compat.py  test_openalex_fetcher.py  test_publications.py  test_pubmed_fetcher.py  test_quality.py  test_registry.py  test_sync.py  test_templates.py  test_transparency.py
tests/fixtures/: sample_article.xml
