[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bmlib"
version = "0.2.0"
description = "Shared library for biomedical literature tools — LLM abstraction, quality assessment, transparency analysis, and database utilities"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    { name = "Horst Herb", email = "my.list.subscriptions@gmail.com" },
]
keywords = ["biomedical", "llm", "quality-assessment", "literature"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "jinja2>=3.1",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]
ollama = ["ollama>=0.3"]
postgresql = ["psycopg2-binary>=2.9"]
transparency = ["httpx>=0.25"]
publications = ["httpx>=0.25"]
dev = ["pytest>=7.0", "pytest-cov", "ruff"]
all = ["bmlib[anthropic,ollama,postgresql,transparency,publications,dev]"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
